PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-inference-126_const_char/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:6: error: assignment of read-only variable ‘a’
    3 |     a=1;
      |      ^

return code: 1
